--- a/src/screens/Home/Home.css
+++ b/src/screens/Home/Home.css
@@ -18,7 +18,7 @@
 }
 
 .home-page .page {
-  min-height: 100vh;
+  min-height: 101vh;
 }
 
 /* .animation-container {
